--- a/SmartShepherdAPI/Dockerfile
+++ b/SmartShepherdAPI/Dockerfile
@@ -2,17 +2,19 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /app
 
-# Copy everything and restore
-COPY . ./
-RUN dotnet restore SmartShepherdAPI.csproj
+COPY SmartShepherdAPI/SmartShepherdAPI.csproj SmartShepherdAPI/
+RUN dotnet restore SmartShepherdAPI/SmartShepherdAPI.csproj
 
 # Publish the release version
-RUN dotnet publish SmartShepherdAPI.csproj -c Release -o /out
+COPY . .
+WORKDIR /app/SmartShepherdAPI
+RUN dotnet publish -c Release -o /out
 
 # Use the runtime image
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
 COPY --from=build /out .
+
 
 # Run the app
 ENTRYPOINT ["dotnet", "SmartShepherdAPI.dll"]
