--- a/SmartShepherdAPI/Dockerfile
+++ b/SmartShepherdAPI/Dockerfile
@@ -1,17 +1,15 @@
-# Use the .NET SDK image to build the app
+# Use the official .NET SDK image for build
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /app
 
-# Copy the project file and restore dependencies
-COPY SmartShepherdAPI/SmartShepherdAPI.csproj SmartShepherdAPI/
-RUN dotnet restore SmartShepherdAPI/SmartShepherdAPI.csproj
+# Copy everything and restore
+COPY . ./
+RUN dotnet restore SmartShepherdAPI.csproj
 
-# Copy everything else and build
-COPY . .
-WORKDIR /app/SmartShepherdAPI
-RUN dotnet publish -c Release -o /out
+# Publish the release version
+RUN dotnet publish SmartShepherdAPI.csproj -c Release -o /out
 
-# Use the ASP.NET runtime image
+# Use the runtime image
 FROM mcr.microsoft.com/dotnet/aspnet:6.0
 WORKDIR /app
 COPY --from=build /out .
