--- a/SmartShepherdAPI/Dockerfile
+++ b/SmartShepherdAPI/Dockerfile
@@ -2,17 +2,18 @@
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 WORKDIR /app
 
-# Copy everything and restore
-COPY . ./
-RUN dotnet restore SmartShepherdAPI.csproj
+# Copy only csproj first (rest comes later)
+COPY ["SmartShepherdAPI.csproj", "./"]
+RUN dotnet restore
 
-# Publish the release version
+# Copy everything and publish
+COPY . ./
 RUN dotnet publish SmartShepherdAPI.csproj -c Release -o /out
 
 # Use the runtime image
 FROM mcr.microsoft.com/dotnet/aspnet:9.0
 WORKDIR /app
-COPY --from=build /out .
+COPY --from=build /out ./
 
 # Run the app
 ENTRYPOINT ["dotnet", "SmartShepherdAPI.dll"]
